# syncline

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_DOC.md  GEMINI.md  KNOWN_BUGS.md  LICENSE.md  PROTOCOL.md  README.md  TESTING.md  manifest.json  mkdocs.yml  release-please-config.json
.github/workflows/: build.yml  plugin-id-consistency.yml  prerelease.yml  release-please.yml  release.yml
assets/: analyze.py  extract_svg.py
benchmarks/: Cargo.toml  package-lock.json  package.json  test-e2e.cjs  test-obsidian.cjs
benchmarks/benches/: sync_benchmark.rs
benchmarks/test-vault-e2e/: hello.md
benchmarks/test-vault-e2e/.obsidian/: community-plugins.json
benchmarks/test-vault-e2e/.obsidian/plugins/syncline/: data.json  main.js  manifest.json
client_folder/: Cargo.toml  test_diffs.rs  test_dissimilar.rs  test_dissimilar_order.rs  test_yrs.rs
client_folder/src/: client.rs  diff.rs  lib.rs  main.rs  network.rs  protocol.rs  state.rs  storage.rs  watcher.rs
client_folder/tests/: binary_sync.rs  connectivity.rs  e2e.rs  edge_cases.rs  fs_operations.rs  offline_text.rs  persistence.rs  text_sync.rs
client_folder/tests/common/: mod.rs
desktop/src/: index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/: DEPLOY_TO_OBSIDIAN.md  DESIGN_DOC_CLIENT.md  DESIGN_DOC_V1.md  E2EE_IMPLEMENTATION.md  FORMAL_VERIFICATION.md  FUTURE_WORK.md  KNOWN_BUGS.md  PROTOCOL.md  RELEASE_PLAN.md  backups.md  encryption.md  formal-verification.md  future-work.md  how-it-works.md  index.md  nginx.md
docs/tla/: .gitignore  README.md  SynclineSync.cfg  SynclineSync.tla  SynclineSyncCrossClient.cfg  SynclineSyncCrossClient.tla  SynclineSyncDiffLayer.tla  SynclineSyncDiffLayerBug.cfg  SynclineSyncDiffLayerFixed.cfg  SynclineSyncDiffLayerFixed.tla  SynclineSyncPathCollision.cfg  SynclineSyncPathCollision.tla  SynclineSyncPathCollisionSmall.cfg  SynclineSyncRename.cfg  SynclineSyncRename.tla  SynclineSyncRenameSmall.cfg  SynclineSyncSmall.cfg
e2e/: .gitignore  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/test/specs/: basic.e2e.ts  issue56.e2e.ts  issue57.e2e.ts  issue58.e2e.ts  issue63.e2e.ts  phase1.e2e.ts  phase2.e2e.ts  phase3.e2e.ts  phase4.e2e.ts
fuzzer/: Cargo.toml
fuzzer/src/: main.rs  testempty.rs
obsidian-plugin/: .gitignore  README.md  eslint.config.js  install.sh  main.ts  manifest.json  package-lock.json  package.json  rollup.config.js  status-view.ts  styles.css  tsconfig.json
server/: Cargo.toml
server/src/: db.rs  main.rs  server.rs
syncline/: Cargo.toml
syncline/examples/: dump_manifest_paths.rs
syncline/src/: client_v1.rs  ignore.rs  lib.rs  main.rs  protocol.rs  wasm_client.rs  wasm_client_v1.rs
syncline/src/client/: app.rs  mod.rs  network.rs  protocol.rs  state.rs  storage.rs  watcher.rs
syncline/src/server/: db.rs  migration.rs  mod.rs  server.rs
syncline/src/v1/: blob_store.rs  chunker.rs  disk.rs  hash.rs  ids.rs  manifest.rs  migration.rs  mod.rs  ops.rs  projection.rs  sync.rs
syncline/tests/: e2e.rs  fs_conflict_scenarios.rs  fs_directory_operations.rs  fs_edge_cases.rs  fs_file_operations.rs  fs_metadata_operations.rs  v1_protocol_e2e.rs
syncline/tests/common/: mod.rs
