[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../server" }
client_folder = { path = "../client_folder" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3"
tempfile = "3.25.0"
yrs = "0.25"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "sync_benchmark"
harness = false
