[package]
name = "client_folder"
version = "0.1.0"
edition = "2021"

[dependencies]
syncline = { path = "../syncline" }
yrs = "0.19"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
url = "2.5"
clap = { version = "4.5.58", features = ["derive"] }
notify = "8.2.0"
walkdir = "2.5.0"
diff = "0.1.13"
base64 = "0.22.1"
