[package]
name = "client_folder"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.1.1"
dissimilar = "1.0.10"
futures = "0.3.32"
futures-util = "0.3.32"
imara-diff = "0.2.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
walkdir = "2.5.0"
yrs = "0.25.0"

[dev-dependencies]
anyhow = "1.0.102"
tempfile = "3.25.0"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
