[package]
name = "fuzzer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
yrs = "0.25"
