[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
syncline = { path = "../syncline" }
yrs = "0.19"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
headers = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.58", features = ["derive"] }
bytes = "1.11.1"

[dev-dependencies]
tokio-tungstenite = "0.28.0"
url = "2.5.8"
