[package]
name = "syncline"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yrs = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
dissimilar = "1.0"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "console",
] }
console_error_panic_hook = "0.1"
# `v1::ids` needs a random source for UUIDv4/v7 under wasm32-unknown-unknown;
# `js` feature routes getrandom through the browser's crypto API.
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
axum = { version = "0.7", features = ["ws"] }
headers = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1.11"
colored = "3.1"
imara-diff = "0.2"
notify = "8.2"
notify-debouncer-mini = "0.7"
url = "2.5"
walkdir = "2.5"
gethostname = "1"

[dev-dependencies]
tempfile = "3.2"
tokio-tungstenite = "0.28"
url = "2.5"
